# Strategickhaos-DAO-llc-sagco-os

./: .gitignore  EXAMPLES.md  FLAMELANG_DEMO.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_SUMMARY.md  build-sagco-live.sh  build.sh  demo.py  flamelang  install-sagco-toolchain.sh  linker.ld  pyproject.toml  sagco  toolchain.sh
.devcontainer/: devcontainer.json
boot/: grub.cfg  start.s
docs/flamelang/: periodic-table.html
flamelang/: .gitignore  Cargo.toml  FRACTAL_THEORY.md  IMPLEMENTATION_COMPLETE.md  OOP_PRINCIPLES.md  README.md
flamelang/src/: lib.rs  main.rs
flameos/: BOOT_OUTPUT.md  README.md  build-sagco-live.sh  linker.ld  test-build.sh  toolchain.sh
flameos/boot/: grub.cfg  start.s
flameos/kernel/: kernel.c
kernel/: kernel.c
src/: __init__.py
src/core/: __init__.py  bootloader.py  config.py  flamelang.py  ipc.py  logger.py  memory.py  packages.py  sagco.py  scheduler.py  security.py
src/engines/: __init__.py
src/integrations/: __init__.py
src/layers/: __init__.py
tests/: __init__.py  test_flamelang.py  test_infrastructure.py  test_oop_principles.py  test_sagco.py
